# meta-graph-cli

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
docs/: auth.md  cookbook.md  reference.md
scripts/: build_data.py  concat.py  edges.txt  scrape.py  urls.ig.txt  urls.nodes.txt
skills/: README.md
skills/meta-graph/: SKILL.md
skills/meta-platform-ops/: SKILL.md
src/meta_graph/: __init__.py  _runtime.py  auth.py  cli.py  client.py  config.py  errors.py  output.py  version.py
src/meta_graph/commands/: discovery.py  generic.py  ig.py  me.py  token.py
src/meta_graph/data/: edges.json  nodes.json
tests/: test_client.py  test_commands.py  test_errors.py
