[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "meta-graph"
version = "0.1.0"
description = "A clean, httpie-style command-line client for Meta's Graph API and Instagram Graph API."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Artemii Novoselov" }]
keywords = ["meta", "facebook", "instagram", "graph-api", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.1",
    "requests>=2.31",
    "rich>=13",
    "tomli>=2 ; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-vcr>=1",
    "vcrpy>=6",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-requests>=2.31",
    "build",
    "twine",
]

[project.scripts]
meta = "meta_graph.cli:main"

[project.urls]
Homepage = "https://github.com/crimeacs/meta-graph-cli"
Repository = "https://github.com/crimeacs/meta-graph-cli"
Issues = "https://github.com/crimeacs/meta-graph-cli/issues"

[tool.hatch.build]
include = [
    "src/meta_graph/**/*.py",
    "src/meta_graph/data/*.json",
]

[tool.hatch.build.targets.wheel]
packages = ["src/meta_graph"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "RUF"]
ignore = ["E501"]  # line length handled by formatter

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
exclude = ["scripts/", "tests/cassettes/"]

[[tool.mypy.overrides]]
module = ["vcr.*", "html2text.*", "bs4.*", "tomli.*"]
ignore_missing_imports = true

# Click's @pass_context decorator confuses mypy strict mode (see python/mypy#8625).
# Relax strict checks on the command modules; the core (client/auth/config/errors)
# stays under full strict typing.
[[tool.mypy.overrides]]
module = ["meta_graph.commands.*"]
disallow_untyped_decorators = false
disable_error_code = ["arg-type"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
